--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,7 @@
 <header class="masthead">
-  <h3 class="masthead-title">
+  <link rel="icon" href="favicon.png" type="image/png" sizes="16x16">
+  <h3 class="masthead-title">    <link rel="icon" href="images/favicon.png" type="image/png" sizes="16x16">
+
     <a href="{{ site.github.url }}/">{{ site.data.settings.title }}</a>
     <small class="masthead-subtitle">{{ site.data.settings.tagline }}</small>
     {% include menu.html %}
