updated home and research

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <header class="masthead">
-  <link rel="icon" href="favicon.png" type="image/png" sizes="16x16">
-  <h3 class="masthead-title">    <link rel="icon" href="images/favicon.png" type="image/png" sizes="16x16">
+  <link rel="icon" href="favicon-96x96.png" type="image/png" sizes="96x96">
+  <h3 class="masthead-title">   <!-- <link rel="icon" href="images/favicon.png" type="image/png" sizes="16x16">-->
 
     <a href="{{ site.github.url }}/">{{ site.data.settings.title }}</a>
     <small class="masthead-subtitle">{{ site.data.settings.tagline }}</small>
