--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3,8 +3,8 @@
 */
 
 body {
-  font-family: "PT Serif", Georgia, "Times New Roman", serif;
-  font-size: 18px;
+  font-family: "Fira Sans", "Lato", "Quattrocento Sans", "PT Serif", Georgia, "Times New Roman", serif;
+  font-size: 15px;
   color: #515151;
   line-height: 1.75rem;
 }
@@ -28,7 +28,7 @@ h1 a {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: "Quattrocento Sans", sans-serif;
+  font-family: "Fira Sans", "Lato", "Quattrocento Sans", sans-serif;
   color: #333;
 }
 
@@ -79,7 +79,7 @@ blockquote p {
 
 @media (max-width: 1366px) {
   .container {
-    width: 45vw;
+    width: 60vw;
   }
 }
 
@@ -99,7 +99,7 @@ blockquote p {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
   margin-bottom: 4rem;
-  font-family: "Quattrocento Sans", sans-serif;
+  font-family: "Lato", "Quattrocento Sans", sans-serif;
 }
 
 .masthead a:hover {
@@ -135,7 +135,7 @@ blockquote p {
   margin-top:3px;
   margin-bottom: 1rem;
   color: #9a9a9a;
-  font-family: 'Quattrocento Sans', sans-serif;
+  font-family: "Fira Sans", "Lato", 'Quattrocento Sans', sans-serif;
   font-size:0.8rem;
 }
 
@@ -164,7 +164,7 @@ blockquote p {
 
 .pagination {
   overflow: hidden;
-  font-family: 'Quattrocento Sans', sans-serif;
+  font-family: "Fira Sans", "Lato", 'Quattrocento Sans', sans-serif;
   text-align: center;
 }
 
