--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -1,7 +1,7 @@
 <div class="menu">
   <nav class="menu-content">
     {% for item in site.data.settings.menu %}
-      <a href="{{ site.url }}/menu/{{ item.url }}">{{ item.name }}</a>
+      <a href="{{ site.baseurl }}/menu/{{ item.url }}">{{ item.name }}</a>
     {% endfor %}
   </nav>
   <nav class="social-icons">
