--- a/_includes/related-posts.html
+++ b/_includes/related-posts.html
@@ -8,9 +8,9 @@
         {% else %}
           <li>
             <h3>
-              <a href="{{ site.url }}{{ mypost.url }}">
+              <a href="{{ site.baseurl }}{{ mypost.url }}">
                 {{ mypost.title }}
-                <!--<img src="{{ site.url }}{{ site.baseurl }}/images/{{ mypost.image.teaser }}">-->
+                <!--<img src="{{ site.baseurl }}{{ site.baseurl }}/images/{{ mypost.image.teaser }}">-->
                 <!--<small>{{ mypost.date | date: "%B %-d, %Y" }}</small>-->
               </a>
             </h3>
