body font change

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3,7 +3,7 @@
 */
 
 body {
-  font-family: "Lato", "Fira Sans", "Quattrocento Sans", "PT Serif", Georgia, "Times New Roman", serif;
+  font-family: "Fira Sans", "Lato", "Quattrocento Sans", "PT Serif", Georgia, "Times New Roman", serif;
   font-size: 15px;
   color: #515151;
   line-height: 1.75rem;
